$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 2.1-6 (opened October 30, 2011)

	* FAQ: correct mark-up of hyper links (@uref{} instead of @url{}),
	add new entries on RDA scaling, scaling of NMDS stress and scaling
	of environmental arrows in cca/rda/capscale/envfit, plus some
	minor updates of old entries.

	* ordispider: returns invisibly the coordinates to which each
	point is connected. Triggered by an email query of this
	functionality. 

	* ordiplot3d: expanded example to show how to use xyz.convert() to
	add points as per
	https://stat.ethz.ch/pipermail/r-help/2011-October/293955.html

	* oecosimu: new proposition for implementing parallel processing
	following suggestions of Peter Solymos.  The only relevant
	argument is now 'parallel' which can be either the number of
	parallel processes (defaults getOption("mc.cores", 1)) or a
	pre-defined socket cluster or NULL in which case it is taken as
	the default cluster defined by setDefaultCluster (this last option
	only works in R-to-be-2.15.0 unstable, and using NULL is a user
	error in R 2.14.0 and hence undocumented). The 'parallel' defaults
	to 1 (no parallel processing), but if the user sets the "mc.cores"
	option, all parallel processing functions will automatically use
	that number of parallel processes.  (The "mc.cores" argument is
	used by the 'parallel' package, but it is normally unset.) If
	'parallel' is a socket cluster or there is a default cluster
	('parallel = NULL'), this will be used without setting up and
	closing the cluster. This (1) saves time, (2) allows using of
	other packages than 'vegan' if user has given command
	'clusterEvalQ(library(foo))', and (3) makes unix-like OS
	(incl. MacOS X and Linux) to use the socket processing instead of
	forking.

Version 2.1-5 (closed October 30, 2011)

	* opened a new version with the release of vegan 2.0-1 on Oct 20,
	2011.

	* metaMDSdist: the default value of "noshare" was inconsistent